# presence-for-plex

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  LICENSE  PACKAGING.md  README.md  dist-workspace.toml  main.cpp  main.h  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  release.yml
assets/: plex-rich-presence.desktop  presence-for-plex.desktop  resources.qrc  resources.rc
cmake/: compiler_flags.cmake  dependencies.cmake  packaging.cmake  testing.cmake
cmake/packaging/: macos_dmg_setup.scpt  postinst  postrm
examples/: event_driven_example.cpp
include/: application.h  logger.h  models.h  plex.h  trayicon.h  version.h  version.h.in
include/presence_for_plex/core/: application.hpp  application_interfaces.hpp  authentication_service.hpp  dependency_injection.hpp  event_bus.hpp  event_logger.hpp  event_types.hpp  events.hpp  events_fwd.hpp  events_impl.hpp  models.hpp  runtime_state.hpp
include/presence_for_plex/platform/: browser_launcher.hpp  system_service.hpp  ui_service.hpp
include/presence_for_plex/platform/qt/: qt_dialog_manager.hpp  qt_notification_manager.hpp  qt_settings_dialog.hpp  qt_system_tray.hpp  qt_ui_service.hpp  qt_window_manager.hpp
include/presence_for_plex/platform/windows/: toast_notification_manager.hpp  tray_icon_win.hpp  tray_integration.hpp  windows_ui_service.hpp
include/presence_for_plex/services/: connection_manager.hpp  discord_connection_strategy.hpp  discord_ipc.hpp  discord_presence_service.hpp  frame_queue.hpp  media_service.hpp  network_service.hpp  presence_service.hpp  rate_limiter.hpp  service_factory.hpp  update_service.hpp
include/presence_for_plex/services/discord/: connection_manager.hpp  discord.hpp  discord_ipc.hpp  discord_presence_service.hpp  presence_builder.hpp  rate_limiter.hpp
include/presence_for_plex/services/network/: http_client.hpp  http_types.hpp  request_builder.hpp  sse_client.hpp
include/presence_for_plex/services/plex/: plex.hpp  plex_auth.hpp  plex_auth_storage.hpp  plex_authenticator.hpp  plex_cache_manager.hpp  plex_client.hpp  plex_connection_manager.hpp  plex_media_fetcher.hpp  plex_service.hpp  plex_service_impl.hpp  plex_session_manager.hpp  plex_sse.hpp
include/presence_for_plex/services/plex/metadata/: jikan.hpp  metadata_service.hpp  tmdb.hpp
include/presence_for_plex/utils/: config_validator.hpp  expected.hpp  format_utils.hpp  json_helper.hpp  logger.hpp  plex_headers_builder.hpp  threading.hpp  url_utils.hpp  uuid.hpp  yaml_config.hpp
scripts/: package.bat  package.sh
src/: application.cpp  application.h  config.cpp  config.h  config.rs  discord.cpp  discord.h  discord.rs  discord_ipc.cpp  discord_ipc.h  discordipc.h  http_client.cpp  http_client.h  logger.cpp  logger.h  main.cpp  main.h  main.rs  media.rs  metadata.rs  models.h  plex.cpp  plex.h  plex.rs  plex_account.rs  plex_server.rs  presence.rs  resources.rc  tray.cpp  tray.h  tray.rs  trayicon.cpp  trayicon.h  trayicon_macos.mm  uuid.cpp  uuid.h  version.h
src/core/: application.cpp  authentication_service.cpp  config_manager.cpp  event_bus.cpp  event_logger.cpp
src/core/application/: application.cpp  event_dispatcher.cpp  lifecycle_manager.cpp
src/core/configuration/: config_manager.cpp
src/core/models/: model_validation.cpp
src/platform/: browser_launcher.cpp  ui_service.cpp  ui_service_factory.cpp
src/platform/common/: single_instance.cpp
src/platform/qt/: qt_dialog_manager.cpp  qt_notification_manager.cpp  qt_settings_dialog.cpp  qt_system_tray.cpp  qt_ui_service.cpp  qt_window_manager.cpp
src/platform/windows/: toast_notification_manager.cpp  tray_icon_win.cpp  tray_integration.cpp  windows_ui_service.cpp
src/services/: media_service.cpp  presence_service.cpp  presence_service_base.cpp  update_service.cpp
src/services/discord/: connection_manager.cpp  discord.cpp  discord_client.cpp  discord_connection_strategy.cpp  discord_ipc.cpp  discord_presence_manager.cpp  discord_presence_service.cpp  presence_builder.cpp  rate_limiter.cpp
src/services/network/: curl_http_client.cpp  http_client.cpp  sse_client.cpp
src/services/plex/: plex.cpp  plex_auth.cpp  plex_auth_storage.cpp  plex_authenticator.cpp  plex_cache_manager.cpp  plex_client.cpp  plex_connection_manager.cpp  plex_media_fetcher.cpp  plex_service.cpp  plex_service_impl.cpp  plex_session_manager.cpp  plex_sse.cpp
src/services/plex/metadata/: jikan.cpp  tmdb.cpp
src/utils/: config_validator.cpp  format_utils.cpp  json_helper.cpp  logger.cpp  plex_headers_builder.cpp  url_utils.cpp  uuid_generator.cpp  yaml_config.cpp
src/utils/crypto/: uuid_generator.cpp
src/utils/logging/: logger.cpp
src/utils/threading/: thread_pool.cpp
wix/: main.wxs
