[package]
name = "presence-for-plex"
version = "0.4.0"
edition = "2024"
authors = ["abarnes6"]
description = "Discord Rich Presence for Plex"
license = "MIT"
repository = "https://github.com/abarnes6/presence-for-plex"

[features]
default = ["tray"]
tray = ["tray-icon", "crossbeam-channel", "image", "gtk"]

[dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
eventsource-client = "0.16"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
discord-rich-presence = "1.1"
log = "0.4"
simplelog = "0.12"
dirs = "6"
fs2 = "0.4"
tray-icon = { version = "0.21", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
image = { version = "0.25", default-features = false, features = ["ico"], optional = true }
open = "5.3"
percent-encoding = "2.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFDate"] }

[profile.release]
opt-level = 3
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

